# marian-rs

./: .travis.yml  Cargo.toml  Makefile
src/: fts.rs  main.rs  manifest.rs  porter2.rs  protocol.rs  query.rs  queryst.rs  stemmer.rs  trie.rs
test/: integration_test.js  util.js
