[package]
name = "marian-rust"
version = "0.1.0"
authors = ["Andrew Aldridge <i80and@foxquill.com>"]

[dependencies]
futures = "0.1"
futures-cpupool = "0.1.7"
hyper = "0.11"
lazy_static = "0.2"
maplit = "1.0"
mime = "0.3"
num_cpus = "1.7.0"
qp-trie = "0.7"
regex = "0.2"
serde_json = "1.0"
unicase = "2.0"

[profile.release]
lto = true
