[package]
name = "marian-rust"
version = "0.1.0"
authors = ["Andrew Aldridge <i80and@foxquill.com>"]

[dependencies]
brotli2 = "0.3"
futures = "0.1"
futures-cpupool = "0.1.7"
hyper = "0.11"
lazy_static = "0.2"
log = "0.3"
maplit = "1.0"
mime = "0.3"
num_cpus = "1.7.0"
percent-encoding = "1.0"
qp-trie = "0.7"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "0.4.0"
smallvec = "0.5.0"
unicase = "2.0"
walkdir = "2.0"

[profile.release]
lto = true
