[package]
name = "marian-rust"
version = "0.1.0"
authors = ["Andrew Aldridge <i80and@foxquill.com>"]

[dependencies]
brotli2 = "0.3"
futures = "0.1"
futures-cpupool = "0.1"
hyper = "0.11"
lazy_static = "1.0"
log = "0.4"
maplit = "1.0"
mime = "0.3"
num_cpus = "1.8"
percent-encoding = "1.0"
qp-trie = "0.7"
regex = "1.0"
rusoto_core = "0.32.0"
rusoto_s3 = "0.32.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple-logging = "2.0"
smallvec = "0.6.0"
time = "0.1"
unicase = "2.1"
walkdir = "2.1"

[profile.release]
lto = true
